--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,135 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
 
-  </body>
+<body>
+
+  <header class="header">
+
+    <div class="header-top">
+      <a class="header-top__logo">
+        <img class="header-top__logo-image" src="img/logo.svg" width="191" height="39" alt="Логотип CAT ENERGY">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" aria-label="Главное меню"></button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active"><a>Главная</a></li>
+          <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
+          <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="header__wrapper">
+      <h1 class="header__title">Функциональное питание для котов</h1>
+      <div class="header__slogan">Занялся собой? Займись котом!</div>
+      <img class="header__feed-image" src="img/feed-chicken.png" width="280" height="270"
+        alt="Корм CAT ENERGY 'курица'">
+      <a href="form.html" class="header__btn main-btn">Подобрать программу</a>
+    </div>
+
+  </header>
+
+  <main class="main">
+
+    <section class="сategories">
+
+      <h2 class="visually-hidden">Категории товаров</h2>
+      <ul class="сategories__list">
+
+        <li class="categories__item">
+          <h3 class="categories__title">Похудение</h3>
+          <p class="categories__text">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету!
+            Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a href="catalog.html#slim" class="categories__link">Каталог Slim</a>
+        </li>
+
+        <li class="categories__item">
+          <h3 class="categories__title">Набор массы</h3>
+          <p class="categories__text">
+            Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a href="catalog.html#pro" class="categories__link">Каталог pro</a>
+        </li>
+
+      </ul>
+
+    </section>
+
+    <section class="about-feed">
+
+      <h2 class="about-feed__title">Как это работает</h2>
+      <ul class="about-feed__list">
+        <li class="about-feed__item">
+          <p class="about-feed__text">
+            Функциональное питание содержит только полезные питательные вещества.
+          </p>
+        </li>
+        <li class="about-feed__item">
+          <p class="about-feed__text">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          </p>
+        </li>
+        <li class="about-feed__item">
+          <p class="about-feed__text">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </p>
+        </li>
+        <li class="about-feed__item">
+          <p class="about-feed__text">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </p>
+        </li>
+      </ul>
+
+    </section>
+
+  </main>
+
+  <footer class="footer">
+
+    <a class="footer-logo">
+      <img class="footer-logo" src="img/footer-logo.svg" width="128" height="24" alt="Логотип CAT ENERGY">
+    </a>
+    <div class="footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link" href="https://vk.com" aria-label="Вконтакте">
+            Мы в Вконтакте
+            <svg class="social__ico social__ico--vkontakte"></svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="https://www.instagram.com" aria-label="Инстаграмм">
+            Мы в Инстаграме
+            <svg class="social__ico social__ico--instagram"></svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="https://www.facebook.com" aria-label="Фейсбук">
+            Мы в Фейсбуке
+            <svg class="social__ico social__ico--facebook"></svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__company-link company-link">
+      HTML Academy
+      <svg class="company-link__ico"></svg>
+    </a>
+
+  </footer>
+
+  </main>
+
+</body>
+
 </html>
