--- a/source/form.html
+++ b/source/form.html
@@ -19,7 +19,7 @@
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active"><a href="index.html">Главная</a></li>
           <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
-          <li class="site-list__item"><a>Подбор программы</a></li
+          <li class="site-list__item"><a>Подбор программы</a></li>
         </ul>
       </nav>
     </div>
@@ -66,8 +66,6 @@
     </a>
 
   </footer>
-
-  </main>
 
 </body>
 
