fix catalog-list nameing

--- a/source/form.html
+++ b/source/form.html
@@ -11,11 +11,11 @@
   <header class="header">
 
     <div class="header-top">
-      <a class="header-top__logo">
-        <img class="header-top__logo-image" src="img/logo.svg" width="191" height="39" alt="Логотип CAT ENERGY">
+      <a href="index.html" class="header-top__logo">
+        <img class="header-top__logo-image" src="img/logo.svg" width="191" height="39" alt="Логотип cat energy">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" aria-label="Главное меню"></button>
+        <button type="button" class="main-nav__toggle" aria-label="Открывает/закрывает главное меню"></button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active"><a href="index.html">Главная</a></li>
           <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
@@ -34,26 +34,23 @@
 
   <footer class="footer">
 
-    <a class="footer-logo">
-      <img class="footer-logo" src="img/footer-logo.svg" width="128" height="24" alt="Логотип CAT ENERGY">
+    <a href="index.html" class="footer-logo">
+      <img class="footer-logo" src="img/footer-logo.svg" width="128" height="24" alt="Логотип cat energy">
     </a>
     <div class="footer__social social">
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link" href="https://vk.com" aria-label="Вконтакте">
-            Мы в Вконтакте
             <svg class="social__ico social__ico--vkontakte"></svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="https://www.instagram.com" aria-label="Инстаграмм">
-            Мы в Инстаграме
             <svg class="social__ico social__ico--instagram"></svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="https://www.facebook.com" aria-label="Фейсбук">
-            Мы в Фейсбуке
             <svg class="social__ico social__ico--facebook"></svg>
           </a>
         </li>
