--- a/source/index.html
+++ b/source/index.html
@@ -10,31 +10,31 @@
 
   <header class="header">
 
-    <div class="header-top">
-      <a class="header-top__logo">
-        <img class="header-top__logo-image" src="img/logo.svg" width="191" height="39" alt="Логотип CAT ENERGY">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" aria-label="Главное меню"></button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active"><a>Главная</a></li>
-          <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
-          <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
-        </ul>
-      </nav>
-    </div>
-
-    <div class="header__wrapper">
-      <h1 class="header__title">Функциональное питание для котов</h1>
-      <div class="header__slogan">Занялся собой? Займись котом!</div>
-      <img class="header__feed-image" src="img/feed-chicken.png" width="280" height="270"
-        alt="Корм CAT ENERGY 'курица'">
-      <a href="form.html" class="header__btn main-btn">Подобрать программу</a>
-    </div>
+    <a class="header__logo">
+      <img class="header__logo-image" src="img/logo.svg" width="191" height="39" alt="Логотип cat energy">
+    </a>
+    <nav class="header__nav main-nav">
+      <button type="button" class="main-nav__toggle" aria-label="Открывает/закрывает главное меню"></button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--active"><a>Главная</a></li>
+        <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
+        <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
+      </ul>
+    </nav>
 
   </header>
 
   <main class="main">
+
+    <section class="banner">
+
+      <h1 class="banner__title">Функциональное питание для котов</h1>
+      <div class="banner__slogan">Занялся собой? Займись котом!</div>
+      <img class="banner__feed-image" src="img/feed-chicken.png" width="280" height="270"
+        alt="Корм cat energy со вкусом курицаы">
+      <a href="form.html" class="banner__btn main-btn">Подобрать программу</a>
+
+    </section>
 
     <section class="сategories">
 
@@ -96,25 +96,22 @@
   <footer class="footer">
 
     <a class="footer-logo">
-      <img class="footer-logo" src="img/footer-logo.svg" width="128" height="24" alt="Логотип CAT ENERGY">
+      <img class="footer-logo" src="img/footer-logo.svg" width="128" height="24" alt="Логотип cat energy">
     </a>
     <div class="footer__social social">
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link" href="https://vk.com" aria-label="Вконтакте">
-            Мы в Вконтакте
             <svg class="social__ico social__ico--vkontakte"></svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="https://www.instagram.com" aria-label="Инстаграмм">
-            Мы в Инстаграме
             <svg class="social__ico social__ico--instagram"></svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="https://www.facebook.com" aria-label="Фейсбук">
-            Мы в Фейсбуке
             <svg class="social__ico social__ico--facebook"></svg>
           </a>
         </li>
