--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,13 +11,13 @@
   <header class="header">
 
     <div class="header-top">
-      <a class="header-top__logo">
-        <img class="header-top__logo-image" src="img/logo.svg" width="191" height="39" alt="Логотип CAT ENERGY">
+      <a href="index.html" class="header-top__logo">
+        <img class="header-top__logo-image" src="img/logo.svg" width="191" height="39" alt="Логотип cat energy">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" aria-label="Главное меню"></button>
+        <button type="button" class="main-nav__toggle" aria-label="Открывает/закрывает главное меню"></button>
         <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active"><a  href="index.html">Главная</a></li>
+          <li class="site-list__item site-list__item--active"><a href="index.html">Главная</a></li>
           <li class="site-list__item"><a>Каталог продукции</a></li>
           <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
         </ul>
@@ -31,211 +31,210 @@
     <section class="catalog">
 
       <h2 class="catalog__title">Каталог продукции</h2>
-      <ul class="catalog__list">
-        <li class="catalog__item">
-          <a href="#" class="catalog__link">
-            <div class="catalog__image-wrapper">
-              <img class="catalog__feed-image" src="img/feed-chicken--mini.png" width="140" height="144"
-                alt="Корм CAT ENERGY 'курица'">
-            </div>
-          </a>
-          <div class="catalog__info-wrapper">
-            <a href="#" class="catalog__link">
-              <h3 class="catalog__feed-title">Cat Energy PRO 500 г</h3>
+      <ul class="catalog__list product-list">
+        <li class="product-list__item">
+          <article class="product-list__item-content product">
+            <a href="#" class="product__link">
+              <img class="product__feed-image" src="img/feed-chicken--mini.png" width="140" height="144"
+                alt="Корм cat energy со вкусом курицы 500 грамм">
             </a>
-            <table class="catalog__feed-stats feed-stats">
-              <tr>
-                <td class="feed-stats__field">Объем</td>
-                <td class="feed-stats__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Вкус</td>
-                <td class="feed-stats__value">Курица</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Цена</td>
-                <td class="feed-stats__value">700 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a href="#" class="catalog-btn main-btn">Заказать</a>
-        </li>
-        <li class="catalog__item">
-          <a href="#" class="catalog__link">
-            <div class="catalog__image-wrapper">
-              <img class="catalog__feed-image" src="img/feed-chicken.png" width="140" height="144"
-                alt="Корм CAT ENERGY 'курица'">
+            <div class="product__info-wrapper">
+              <a href="#" class="product__link">
+                <h3 class="product__feed-title">Cat Energy PRO 500 г</h3>
+              </a>
+              <table class="product__feed-stats feed-stats">
+                <tr>
+                  <td class="feed-stats__field">Объем</td>
+                  <td class="feed-stats__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Вкус</td>
+                  <td class="feed-stats__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Цена</td>
+                  <td class="feed-stats__value">700 Р.</td>
+                </tr>
+              </table>
             </div>
-          </a>
-          <div class="catalog__info-wrapper">
-            <a href="#" class="catalog__link">
-              <h3 class="catalog__feed-title">Cat Energy PRO 1000 г</h3>
-            </a>
-            <table class="catalog__feed-stats feed-stats">
-              <tr>
-                <td class="feed-stats__field">Объем</td>
-                <td class="feed-stats__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Вкус</td>
-                <td class="feed-stats__value">Курица</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Цена</td>
-                <td class="feed-stats__value">1000 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a href="#" class="catalog-btn main-btn">Заказать</a>
+            <a href="#" class="product__btn main-btn">Заказать</a>
+          </article>
         </li>
-        <li class="catalog__item">
-          <a href="#" class="catalog__link">
-            <div class="catalog__image-wrapper">
-              <img class="catalog__feed-image" src="img/feed-fish--mini.png" width="140" height="144"
-                alt="Корм CAT ENERGY 'рыба'">
+        <li class="product-list__item">
+          <article class="product-list__item-content product">
+            <a href="#" class="product__link">
+              <img class="product__feed-image" src="img/feed-chicken.png" width="140" height="144"
+                alt="Корм cat energy со вкусом курицы 1000 грамм">
+            </a>
+            <div class="product__info-wrapper">
+              <a href="#" class="product__link">
+                <h3 class="product__feed-title">Cat Energy PRO 1000 г</h3>
+              </a>
+              <table class="product__feed-stats feed-stats">
+                <tr>
+                  <td class="feed-stats__field">Объем</td>
+                  <td class="feed-stats__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Вкус</td>
+                  <td class="feed-stats__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Цена</td>
+                  <td class="feed-stats__value">1000 Р.</td>
+                </tr>
+              </table>
             </div>
-          </a>
-          <div class="catalog__info-wrapper">
-            <a href="#" class="catalog__link">
-              <h3 class="catalog__feed-title">Cat Energy PRO 500 г</h3>
-            </a>
-            <table class="catalog__feed-stats feed-stats">
-              <tr>
-                <td class="feed-stats__field">Объем</td>
-                <td class="feed-stats__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Вкус</td>
-                <td class="feed-stats__value">Рыба</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Цена</td>
-                <td class="feed-stats__value">700 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a href="#" class="catalog-btn main-btn">Заказать</a>
+            <a href="#" class="product__btn main-btn">Заказать</a>
+          </article>
         </li>
-        <li class="catalog__item">
-          <a href="#" class="catalog__link">
-            <div class="catalog__image-wrapper">
-              <img class="catalog__feed-image" src="img/feed-fish.png" width="140" height="144"
-                alt="Корм CAT ENERGY 'рыба'">
+        <li class="product-list__item">
+          <article class="product-list__item-content product">
+            <a href="#" class="product__link">
+              <img class="product__feed-image" src="img/feed-fish--mini.png" width="140" height="144"
+                alt="Корм cat energy со вкусом рыбы 500 грамм">
+            </a>
+            <div class="product__info-wrapper">
+              <a href="#" class="product__link">
+                <h3 class="product__feed-title">Cat Energy PRO 500 г</h3>
+              </a>
+              <table class="product__feed-stats feed-stats">
+                <tr>
+                  <td class="feed-stats__field">Объем</td>
+                  <td class="feed-stats__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Вкус</td>
+                  <td class="feed-stats__value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Цена</td>
+                  <td class="feed-stats__value">700 Р.</td>
+                </tr>
+              </table>
             </div>
-          </a>
-          <div class="catalog__info-wrapper">
-            <a href="#" class="catalog__link">
-              <h3 class="catalog__feed-title">Cat Energy PRO 1000 г</h3>
-            </a>
-            <table class="catalog__feed-stats feed-stats">
-              <tr>
-                <td class="feed-stats__field">Объем</td>
-                <td class="feed-stats__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Вкус</td>
-                <td class="feed-stats__value">Рыба</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Цена</td>
-                <td class="feed-stats__value">1000 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a href="#" class="catalog-btn main-btn">Заказать</a>
+            <a href="#" class="product__btn main-btn">Заказать</a>
+          </article>
         </li>
-        <li class="catalog__item">
-          <a href="#" class="catalog__link">
-            <div class="catalog__image-wrapper">
-              <img class="catalog__feed-image" src="img/feed-buckwheat--mini.png" width="140" height="144"
-                alt="Корм CAT ENERGY ' гречкаа'">
+        <li class="product-list__item">
+          <article class="product-list__item-content product">
+            <a href="#" class="product__link">
+              <img class="product__feed-image" src="img/feed-fish.png" width="140" height="144"
+                alt="Корм cat energy со вкусом рыбы 1000 грамм">
+            </a>
+            <div class="product__info-wrapper">
+              <a href="#" class="product__link">
+                <h3 class="product__feed-title">Cat Energy PRO 1000 г</h3>
+              </a>
+              <table class="product__feed-stats feed-stats">
+                <tr>
+                  <td class="feed-stats__field">Объем</td>
+                  <td class="feed-stats__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Вкус</td>
+                  <td class="feed-stats__value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Цена</td>
+                  <td class="feed-stats__value">1000 Р.</td>
+                </tr>
+              </table>
             </div>
-          </a>
-          <div class="catalog__info-wrapper">
-            <a href="#" class="catalog__link">
-              <h3 class="catalog__feed-title">Cat Energy Slim 500 г</h3>
-            </a>
-            <table class="catalog__feed-stats feed-stats">
-              <tr>
-                <td class="feed-stats__field">Объем</td>
-                <td class="feed-stats__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Вкус</td>
-                <td class="feed-stats__value">Гречка</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Цена</td>
-                <td class="feed-stats__value">400 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a href="#" class="catalog-btn main-btn">Заказать</a>
+            <a href="#" class="product__btn main-btn">Заказать</a>
+          </article>
         </li>
-        <li class="catalog__item">
-          <a href="#" class="catalog__link">
-            <div class="catalog__image-wrapper">
-              <img class="catalog__feed-image" src="img/feed-buckwheat.png" width="140" height="144"
-                alt="Корм CAT ENERGY 'гречкаа'">
+        <li class="product-list__item">
+          <article class="product-list__item-content product">
+            <a href="#" class="product__link">
+              <img class="product__feed-image" src="img/feed-buckwheat--mini.png" width="140" height="144"
+                alt="Корм cat energy со вкусом гречкаи 500 грамм">
+            </a>
+            <div class="product__info-wrapper">
+              <a href="#" class="product__link">
+                <h3 class="product__feed-title">Cat Energy Slim 500 г</h3>
+              </a>
+              <table class="product__feed-stats feed-stats">
+                <tr>
+                  <td class="feed-stats__field">Объем</td>
+                  <td class="feed-stats__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Вкус</td>
+                  <td class="feed-stats__value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Цена</td>
+                  <td class="feed-stats__value">400 Р.</td>
+                </tr>
+              </table>
             </div>
-          </a>
-          <div class="catalog__info-wrapper">
-            <a href="#" class="catalog__link">
-              <h3 class="catalog__feed-title">Cat Energy Slim 1000 г</h3>
-            </a>
-            <table class="catalog__feed-stats feed-stats">
-              <tr>
-                <td class="feed-stats__field">Объем</td>
-                <td class="feed-stats__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Вкус</td>
-                <td class="feed-stats__value">Гречкаа</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Цена</td>
-                <td class="feed-stats__value">700 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a href="#" class="catalog-btn main-btn">Заказать</a>
+            <a href="#" class="product__btn main-btn">Заказать</a>
+          </article>
         </li>
-        <li class="catalog__item">
-          <a href="#" class="catalog__link">
-            <div class="catalog__image-wrapper">
-              <img class="catalog__feed-image" src="img/feed-rice--mini.png" width="140" height="144"
-                alt="Корм CAT ENERGY 'рыба'">
+        <li class="product-list__item">
+          <article class="product-list__item-content product">
+            <a href="#" class="product__link">
+              <img class="product__feed-image" src="img/feed-buckwheat.png" width="140" height="144"
+                alt="Корм cat energy со вкусом гречки 1000 грамм">
+            </a>
+            <div class="product__info-wrapper">
+              <a href="#" class="product__link">
+                <h3 class="product__feed-title">Cat Energy Slim 1000 г</h3>
+              </a>
+              <table class="product__feed-stats feed-stats">
+                <tr>
+                  <td class="feed-stats__field">Объем</td>
+                  <td class="feed-stats__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Вкус</td>
+                  <td class="feed-stats__value">Гречкаа</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Цена</td>
+                  <td class="feed-stats__value">700 Р.</td>
+                </tr>
+              </table>
             </div>
-          </a>
-          <div class="catalog__info-wrapper">
-            <a href="#" class="catalog__link">
-              <h3 class="catalog__feed-title">Cat Energy Slim 500 г</h3>
-            </a>
-            <table class="catalog__feed-stats feed-stats">
-              <tr>
-                <td class="feed-stats__field">Объем</td>
-                <td class="feed-stats__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Вкус</td>
-                <td class="feed-stats__value">Рис</td>
-              </tr>
-              <tr>
-                <td class="feed-stats__field">Цена</td>
-                <td class="feed-stats__value">500 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a href="#" class="catalog-btn main-btn">Заказать</a>
+            <a href="#" class="product__btn main-btn">Заказать</a>
+          </article>
         </li>
-        <li class="catalog__item catalog__item--show-more">
-          <div class="catalog__ico-wrapper">
-            <img class="catalog__ico" src="img/plus-ico.svg" width="31" height="31"
-              alt="Плюс">
-          </div>
-          <h3 class="catalog__feed-title">Показать еще 100500 товаров</h3>
-          <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
-          <button class="catalog__btn main-btn">Показать все</button>
+        <li class="product-list__item">
+          <article class="product-list__item-content product">
+            <a href="#" class="product__link">
+              <img class="product__feed-image" src="img/feed-rice--mini.png" width="140" height="144"
+                alt="Корм cat energy со вкусом рыбы 500 грамм">
+            </a>
+            <div class="product__info-wrapper">
+              <a href="#" class="product__link">
+                <h3 class="product__feed-title">Cat Energy Slim 500 г</h3>
+              </a>
+              <table class="product__feed-stats feed-stats">
+                <tr>
+                  <td class="feed-stats__field">Объем</td>
+                  <td class="feed-stats__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Вкус</td>
+                  <td class="feed-stats__value">Рис</td>
+                </tr>
+                <tr>
+                  <td class="feed-stats__field">Цена</td>
+                  <td class="feed-stats__value">500 Р.</td>
+                </tr>
+              </table>
+            </div>
+            <a href="#" class="product__btn main-btn">Заказать</a>
+          </article>
+        </li>
+        <li class="product-list__item product-list__item--show-more">
+          <article class="product-list__item-content product">
+            <img class="product__ico" src="img/plus-ico.svg" width="31" height="31" alt="Плюс">
+            <h3 class="product__feed-title">Показать еще 100500 товаров</h3>
+            <p class="product__text">На самом деле вкусов гораздо больше!</p>
+            <button type="button" class="product__btn main-btn">Показать все</button>
+          </article>
         </li>
       </ul>
 
@@ -245,26 +244,23 @@
 
   <footer class="footer">
 
-    <a class="footer-logo">
+    <a href="index.html" class="footer-logo">
       <img class="footer-logo" src="img/footer-logo.svg" width="128" height="24" alt="Логотип CAT ENERGY">
     </a>
     <div class="footer__social social">
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link" href="https://vk.com" aria-label="Вконтакте">
-            Мы в Вконтакте
             <svg class="social__ico social__ico--vkontakte"></svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="https://www.instagram.com" aria-label="Инстаграмм">
-            Мы в Инстаграме
             <svg class="social__ico social__ico--instagram"></svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="https://www.facebook.com" aria-label="Фейсбук">
-            Мы в Фейсбуке
             <svg class="social__ico social__ico--facebook"></svg>
           </a>
         </li>
