--- a/source/form.html
+++ b/source/form.html
@@ -10,15 +10,15 @@
 
   <header class="header">
 
-    <a class="header__logo">
+    <a href="index.html" class="header__logo">
       <img class="header__logo-image" src="img/logo.svg" width="191" height="39" alt="Логотип cat energy">
     </a>
     <nav class="header__nav main-nav">
       <button type="button" class="main-nav__toggle" aria-label="Открывает/закрывает главное меню"></button>
       <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active"><a>Главная</a></li>
+        <li class="site-list__item site-list__item--active"><a href="index.html">Главная</a></li>
         <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
-        <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
+        <li class="site-list__item"><a>Подбор программы</a></li>
       </ul>
     </nav>
 
