change modificate on last catalog item

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -226,8 +226,8 @@
             <a href="#" class="product__btn main-btn">Заказать</a>
           </article>
         </li>
-        <li class="product-list__item product-list__item--show-more">
-          <article class="product-list__item-content product">
+        <li class="product-list__item">
+          <article class="product-list__item-content product product--show-more">
             <img class="product__ico" src="img/plus-ico.svg" width="31" height="31" alt="Плюс">
             <h3 class="product__feed-title">Показать еще 100500 товаров</h3>
             <p class="product__text">На самом деле вкусов гораздо больше!</p>
