fix footer logo

--- a/source/form.html
+++ b/source/form.html
@@ -32,8 +32,8 @@
 
   <footer class="footer">
 
-    <a href="index.html" class="footer-logo">
-      <img class="footer-logo" src="img/footer-logo.svg" width="128" height="24" alt="Логотип cat energy">
+    <a href="index.html" class="footer__logo">
+      <img class="footer__logo-image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип cat energy">
     </a>
     <div class="footer__social social">
       <ul class="social__list">
