--- a/source/index.html
+++ b/source/index.html
@@ -95,8 +95,8 @@
 
   <footer class="footer">
 
-    <a class="footer-logo">
-      <img class="footer-logo" src="img/footer-logo.svg" width="128" height="24" alt="Логотип cat energy">
+    <a class="footer__logo">
+      <img class="footer__logo-image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип cat energy">
     </a>
     <div class="footer__social social">
       <ul class="social__list">
