fix cat-slider and form

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -252,7 +252,7 @@
                 <td class="cost__price">200 Р.</td>
               </tr>
             </table>
-            <a href="#" class="аdditional-product__btn main__btn">Заказать</a>
+            <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
           </article>
         </li>
         <li class="аdditional-list__item">
@@ -264,7 +264,7 @@
                 <td class="cost__price">50 Р.</td>
               </tr>
             </table>
-            <a href="#" class="аdditional-product__btn main__btn">Заказать</a>
+            <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
           </article>
         </li>
         <li class="аdditional-list__item">
@@ -276,7 +276,7 @@
                 <td class="cost__price">100 Р.</td>
               </tr>
             </table>
-            <a href="#" class="аdditional-product__btn main__btn">Заказать</a>
+            <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
           </article>
         </li>
         <li class="аdditional-list__item">
@@ -288,7 +288,7 @@
                 <td class="cost__price">300 Р.</td>
               </tr>
             </table>
-            <a href="#" class="аdditional-product__btn main__btn">Заказать</a>
+            <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
           </article>
         </li>
       </ul>
