--- a/source/form.html
+++ b/source/form.html
@@ -55,15 +55,15 @@
             <li class="form__program-item">
               <input class="form__program-radio" type="radio" name="program-feed" value="slim" id="program-slim"
                 checked>
-              <label class="form__radio-title" for="program-slim">Похудение</label>
+              <label class="form__field-title" for="program-slim">Похудение</label>
             </li>
             <li class="form__program-item">
               <input class="form__program-radio" type="radio" name="program-feed" value="pro" id="program-pro">
-              <label class="form__radio-title" for="program-pro">Набор массы</label>
+              <label class="form__field-title" for="program-pro">Набор массы</label>
             </li>
             <li class="form__program-item">
               <input class="form__program-radio" type="radio" name="program-feed" value="don't-know" id="questionable">
-              <label class="form__radio-title" for="questionable">Не знаю (Нужен ваш совет)</label>
+              <label class="form__field-title" for="questionable">Не знаю (Нужен ваш совет)</label>
             </li>
           </ul>
         </fieldset>
@@ -80,7 +80,7 @@
             <svg class="form__phone-ico" aria-label="Иконка телефона"></svg>
           </div>
         </fieldset>
-        <div class="form__comment-wrapper">
+        <div class="form__set">
           <p class="form__title form__title--single-field">Комментарий</p>
           <textarea class="form__comment-field" placeholder="Расскажите обо всех повадках кота"></textarea>
         </div>
@@ -89,19 +89,19 @@
           <ul class="form__additional-list">
             <li class="form__additional-item">
               <input class="form__additional-checkbox" type="checkbox" name="change-sugar" id="change-sugar" checked>
-              <label class="form__checkbox-title" for="change-sugar">Сахарозаменитель</label>
+              <label class="form__field-title" for="change-sugar">Сахарозаменитель</label>
             </li>
             <li class="form__additional-item">
               <input class="form__additional-checkbox" type="checkbox" name="water" id="water">
-              <label class="form__checkbox-title" for="water">Питьевая вода</label>
+              <label class="form__field-title" for="water">Питьевая вода</label>
             </li>
             <li class="form__additional-item">
               <input class="form__additional-checkbox" type="checkbox" name="milk" id="milk">
-              <label class="form__checkbox-title" for="milk">Молоко</label>
+              <label class="form__field-title" for="milk">Молоко</label>
             </li>
             <li class="form__additional-item">
               <input class="form__additional-checkbox" type="checkbox" name="vitamin" id="vitamin">
-              <label class="form__checkbox-title" for="vitamin">Витамины</label>
+              <label class="form__field-title" for="vitamin">Витамины</label>
             </li>
           </ul>
         </fieldset>
