--- a/source/index.html
+++ b/source/index.html
@@ -119,16 +119,18 @@
           Затраты на питание: 15 000 руб.
         </p>
         <div class="result__image-wrapper">
-          <img class="result__image" src="img/result-cat.png" alt="Кот до и после" width="311" height="232">
+          <img class="result__image result__image--after" src="img/result-cat--afte.png" alt="Кот до - полный" width="311" height="232">
+          <img class="result__image result__image--middle" src="img/result-cat--middle.png" alt="Кот, левая часть до - полный кот, правая часть после - стройный кот" width="311" height="232">
+          <img class="result__image result__image--before" src="img/result-cat--before.png" alt="Кот после - стройный" width="311" height="232">
         </div>
         <div class="result__range-wrapper">
-          <p class="result__text-befort">
+          <button type="button" class="result__btn">
             Было
-          </p>
-          <input class="result__range" type="range" min="0" max="100" value="50" step="1">
-          <p class="result__text-after">
+          </button>
+          <div class="result__range-bar"></div>
+          <button type="button" class="result__btn">
             Стало
-          </p>
+          </button>
         </div>
 
       </section>
