add contacts bg-color in inner pages

--- a/source/form.html
+++ b/source/form.html
@@ -130,7 +130,7 @@
 
   <footer class="footer">
 
-    <section class="contacts">
+    <section class="contacts contacts--gray">
 
       <div class="contacts__wrapper container">
         <div class="contacts__text-wrapper">
