--- a/source/catalog.html
+++ b/source/catalog.html
@@ -329,7 +329,7 @@
 
   <footer class="footer">
 
-    <section class="contacts">
+    <section class="contacts contacts--gray">
 
       <div class="contacts__wrapper container">
         <div class="contacts__text-wrapper">
