--- a/source/catalog.html
+++ b/source/catalog.html
@@ -314,11 +314,12 @@
 
     <section class="special">
 
-      <div class="cаdditional__wrapper container">
+      <div class="special__wrapper container">
         <h2 class="visually-hidden">Акция</h2>
+        <img class="special__ico" src="img/gift-ico.svg" width="56" height="61" alt="Подарок">
         <p class="special__text">
           Закажите все
-          и получите чехол для кота в подарок!
+          и&nbsp;получите чехол для кота в подарок!
         </p>
       </div>
 
