--- a/source/form.html
+++ b/source/form.html
@@ -38,13 +38,15 @@
 
     <section class="program">
 
-      <div class="program__wrapper container">
-        <h1 class="program__title">Подбор программы</h1>
+      <div class="program__text-wrapper container">
+        <h1 class="program__title main-title">Подбор программы</h1>
         <p class="program__text">
           Заполните анкету и мы подберем
           программу питания для вашего кота
         </p>
-        <form class="program__form form" method="post" action="https://echo.htmlacademy.ru">
+      </div>
+      <form class="program__form form" method="post" action="https://echo.htmlacademy.ru">
+        <div class="program__form-wrapper container">
           <fieldset class="form__set">
             <legend class="visually-hidden">Данные кота</legend>
             <div class="form__field-wrapper">
@@ -60,7 +62,9 @@
               <input class="form__field" type="text" name="cat-age" id="cat-age" placeholder="7">
             </div>
           </fieldset>
-          <fieldset class="form__set">
+        </div>
+        <fieldset class="form__set form-set--radio">
+          <div class="program__form-inner container">
             <legend class="visually-hidden">Программа питания</legend>
             <ul class="form__program-list">
               <li class="form__program-item">
@@ -78,19 +82,21 @@
                 <label class="form__field-title" for="questionable">Не знаю (Нужен ваш совет)</label>
               </li>
             </ul>
-          </fieldset>
+          </div>
+        </fieldset>
+        <div class="program__form-wrapper container">
           <fieldset class="form__set">
             <legend class="form__title">Контактные данные (владельца кота)</legend>
             <div class="form__field-wrapper">
               <label class="form__field-title" for="email">E-mail:*</label>
               <input class="form__field" type="email" name="email" id="email" placeholder="kuklachev@gmail.com"
                 required>
-              <svg class="form__email-ico" aria-label="Иконка письма"></svg>
+              <svg class="form__ico form__ico--email" aria-label="Иконка письма"></svg>
             </div>
             <div class="form__field-wrapper">
               <label class="form__field-title" for="phone">Телефон:*</label>
               <input class="form__field" type="text" name="phone" id="phone" placeholder="8 (960) 900-60-90" required>
-              <svg class="form__phone-ico" aria-label="Иконка телефона"></svg>
+              <svg class="form__ico form__ico--phone" aria-label="Иконка телефона"></svg>
             </div>
           </fieldset>
           <div class="form__set">
@@ -99,28 +105,30 @@
           </div>
           <fieldset class="form__set">
             <legend class="form__title">Дополнительно</legend>
-            <ul class="form__additional-list">
-              <li class="form__additional-item">
+            <ul class="form__program-list">
+              <li class="form__program-item">
                 <input class="form__additional-checkbox" type="checkbox" name="change-sugar" id="change-sugar" checked>
                 <label class="form__field-title" for="change-sugar">Сахарозаменитель</label>
               </li>
-              <li class="form__additional-item">
+              <li class="form__program-item">
                 <input class="form__additional-checkbox" type="checkbox" name="water" id="water">
                 <label class="form__field-title" for="water">Питьевая вода</label>
               </li>
-              <li class="form__additional-item">
+              <li class="form__program-item">
                 <input class="form__additional-checkbox" type="checkbox" name="milk" id="milk">
                 <label class="form__field-title" for="milk">Молоко</label>
               </li>
-              <li class="form__additional-item">
+              <li class="form__program-item">
                 <input class="form__additional-checkbox" type="checkbox" name="vitamin" id="vitamin">
                 <label class="form__field-title" for="vitamin">Витамины</label>
               </li>
             </ul>
           </fieldset>
           <button type="submit" class="form__btn main-btn">Отправить заявку</button>
-        </form>
-        <p class="program__sub-text">* — Обязательные поля</p>
+        </div>
+      </form>
+      <div class="program__text-wrapper container">
+        <p class="program__sub-text main-text">* — Обязательные поля</p>
       </div>
 
     </section>
