--- a/source/form.html
+++ b/source/form.html
@@ -13,24 +13,23 @@
 
     <div class="header__wrapper container">
       <a href="index.html" class="header__logo">
-        <img class="header__logo-image" src="img/logo.svg" width="191" height="39" alt="Логотип cat energy">
+        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Логотип cat energy">
       </a>
+      <nav class="header__nav main-nav">
+        <button type="button" class="main-nav__toggle" aria-label="Открывает/закрывает главное меню"></button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="index.html" class="site-list__link">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html" class="site-list__link">Каталог продукции</a>
+          </li>
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav class="header__nav main-nav">
-      <button type="button" class="main-nav__toggle main-nav__toggle--active"
-        aria-label="Открывает/закрывает главное меню"></button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active">
-          <a href="index.html" class="site-list__link">Главная</a>
-        </li>
-        <li class="site-list__item">
-          <a href="catalog.html" class="site-list__link">Каталог продукции</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link">Подбор программы</a>
-        </li>
-      </ul>
-    </nav>
 
   </header>
 
@@ -150,16 +149,16 @@
         </div>
       </div>
       <div class="contacts__map"></div>
-      <img class="contacts__map-image" src="img/map.jpg" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
-        width="320" height="374">
+      <img class="contacts__map-image" src="img/bg-map-mobile@1x.png"
+        alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" width="320" height="374">
 
     </section>
 
     <section class="footer-links">
 
-      <div class="contacts__wrapper container">
+      <div class="footer-links__wrapper container">
         <a href="index.html" class="footer-links__logo">
-          <img class="footer-links__logo-image" src="img/footer-logo.svg" width="128" height="24"
+          <img class="footer-links__logo-image" src="img/logo-footer.svg" width="128" height="24"
             alt="Логотип cat energy">
         </a>
         <ul class="footer-links__social social">
@@ -179,10 +178,10 @@
             </a>
           </li>
         </ul>
-        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer-links__company-link company-link main-text">
-          HTML Academy
-          <svg class="company-link__ico"></svg>
-        </a>
+        <div class="footer-links__company-link company-link">
+          <a class="company-link__text main-text" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a href="https://htmlacademy.ru/intensive/adaptive"></a><svg class="company-link__ico"></svg></a>
+        </div>
       </div>
 
     </section>
